# git_summarize

./: .env.example  .gitignore  .yamllint.yml  Dockerfile  Dockerfile.phoenix  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: summarize.py
app/core/: config.py  logging.py  observability.py  security.py
app/schemas/: summarize.py
app/services/: cache.py  github_client.py  llm_factory.py  preprocessor.py  summarizer.py
scripts/: test-api.ps1  test-api.sh
tests/: conftest.py  test_api.py  test_services.py
