[project]
name = "github-summarizer"
version = "1.0.0"
description = "Transform any GitHub repository URL into a structured technical intelligence report using LLMs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",

    # ── Data validation ───────────────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ── Auth ──────────────────────────────────────────────────────────────────
    "pyjwt[crypto]>=2.9.0",   # Logto JWT validation

    # ── HTTP ──────────────────────────────────────────────────────────────────
    "httpx>=0.27.0",
    "tenacity>=8.4.0",         # exponential backoff

    # ── LLM / AI ──────────────────────────────────────────────────────────────
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langsmith>=0.1.0",        # observability / tracing
    "tiktoken>=0.7.0",         # token estimation

    # ── Observability (Arize Phoenix) ─────────────────────────────────────
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-api>=1.20.0",

    # ── Code chunking ─────────────────────────────────────────────────────────
    "chunkhound>=4.0.0",       # cAST algorithm, Tree-sitter, 29 languages

    # ── Cache ─────────────────────────────────────────────────────────────────
    "redis>=5.0.0",

    # ── Logging ───────────────────────────────────────────────────────────────
    "structlog>=24.0.0",

    # ── Config ───────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",           # TestClient transport
    "ruff>=0.4.0",             # linter + formatter
    "mypy>=1.10.0",            # type checker
    "types-redis>=4.6",
    "yamllint>=1.35.0",        # YAML linter
]

[project.scripts]
# Run with: uv run serve
serve = "uvicorn:main"

[tool.uv]
# Use the project's own virtual environment managed by uv.
# Run `uv sync` to create it; `uv run` activates it transparently.
package = false   # this is an app, not a library — no wheel needed

[tool.uv.sources]
# Pin chunkhound to PyPI (no special index needed)

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (ruff format handles this)
    "B008",   # FastAPI Depends() in function defaults
    "UP007",  # X | Y union syntax (keep Optional for clarity)
    "B904",   # raise from — FastAPI HTTPException re-raises are idiomatic
    "UP042",  # StrEnum — keep str+Enum for Pydantic v2 compat
    "RUF001", # ambiguous unicode (intentional en-dashes in strings)
    "RUF002", # ambiguous unicode in docstrings
    "TC002",  # type-checking imports — some are runtime-needed
    "TC003",  # type-checking imports — some are runtime-needed
    "B905",   # zip() strict — not always applicable
    "RUF012", # mutable class defaults — used by structlog processors
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = ["tests/"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

# ── Build system ──────────────────────────────────────────────────────────────
# hatchling is the lightest PEP 517 backend; required by uv even for
# non-library projects so `uv sync` can resolve the project itself.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
